deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wishlist-service
  namespace: clahanstore
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  selector:
    matchLabels:
      app: wishlist-service
  template:
    metadata:
      labels:
        app: wishlist-service
    spec:
      containers:
        - name: wishlist-service
          image: team4devops/ecommerce-wishlist-service:v1.0.0
          ports:
            - containerPort: 3007

          resources:
            requests:
              cpu: 25m
              memory: 64Mi
            limits:
              cpu: 250m
              memory: 256Mi

          livenessProbe:
            httpGet:
              path: /health
              port: 3007
            initialDelaySeconds: 15
            periodSeconds: 20
            timeoutSeconds: 5
            failureThreshold: 3

          readinessProbe:
            httpGet:
              path: /health
              port: 3007
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3

          volumeMounts:
            - name: tmp-volume
              mountPath: /tmp

      volumes:
        - name: tmp-volume
          emptyDir: {}
