mongo-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: wishlist-mongo
  namespace: clahanstore
spec:
  serviceName: wishlist-mongo
  replicas: 1
  selector:
    matchLabels:
      app: wishlist-mongo
  template:
    metadata:
      labels:
        app: wishlist-mongo
    spec:
      containers:
        - name: mongo
          image: mongo:6.0
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: mongo-data
              mountPath: /data/db
  volumeClaimTemplates:
    - metadata:
        name: mongo-data
      spec:
        storageClassName: nfs-client
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 5Gi
