mongo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wishlist-mongo
  namespace: clahanstore
spec:
  selector:
    app: wishlist-mongo
  ports:
    - port: 27017
      targetPort: 27017
