service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wishlist-service
  namespace: clahanstore
spec:
  selector:
    app: wishlist-service
  ports:
    - port: 3007
      targetPort: 3007
  type: ClusterIP
