httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: wishlist-route
  namespace: clahanstore
spec:
  parentRefs:
    - name: clahanstore-gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /wishlist
      backendRefs:
        - name: wishlist-service
          port: 3007
